[package]
name = "concordevm"
description = "The Concorde Virtual Machine" 
version = "0.1.0"
authors = ["PerfectlyInternal", "AayushPanda"]
edition = "2024"
repository = "https://github.com/concordic/ConcordeVM"
license-file = "LICENSE"

[lib]
name = "concordevm_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
concordeisa = "0.2.1"
cloneable-any = "0.1.0"
dyn-clone = "1.0.20"
log = "0.4.28"
colog = "1.3.0"
io-streams = "0.16.3"
libffi = "5.1.0"
libloading = "0.9.0"
regex = "1.12.3"
paste = "1.0.15"
